# CppGameLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Direction.h  DirectionUtils.cpp  DirectionUtils.h  GameObjectMover.cpp  GameObjectMover.h  GameStructure.cpp  GameStructure.h  Hotspot.cpp  Hotspot.h  Inventory.cpp  Inventory.h  KeyFrame.cpp  KeyFrame.h  README.md  ReliableUdpPacketReceivedEvent.cpp  ReliableUdpPacketReceivedEvent.h  SerializationManager.cpp  SerializationManager.h  SpriteAsset.cpp  SpriteAsset.h  TestMe.h  Timer.cpp  Timer.h  Utils.cpp  Utils.h  cppgamelib.cpp  cppgamelib.h  cppgamelib.sln  cppgamelib.vcxproj  cppgamelib.vcxproj.filters  game_structure.cpp  game_structure.h  tinyxml2.h  vcpkg-configuration.json  vcpkg.json
Encoding/: BitPackedEventSerializationManager.cpp  BitPackedEventSerializationManager.h  JsonEventSerializationManager.cpp  JsonEventSerializationManager.h  XmlEventSerializationManager.cpp  XmlEventSerializationManager.h
Logging/: ErrorLogManager.cpp  ErrorLogManager.h
TestLinking/: TestLinking.vcxproj  main.cpp
ai/: ActiveSelector.h  Behavior.h  BehaviorResult.h  BehaviorTree.cpp  BehaviorTree.h  BehaviorTreeBuilder.cpp  BehaviorTreeBuilder.h  BehavioralSequence.h  Blackboard.cpp  Blackboard.h  BlackboardKey.h  BlackboardKeyRegistry.cpp  BlackboardKeyRegistry.h  Composite.h  CompositeBehavior.h  Condition.h  ConditionalSequence.h  ContinueLastSuccessfulSequenceSelector.h  Decorator.h  FSM.cpp  FSM.h  FSMState.cpp  FSMState.h  FSMTransition.h  Filter.h  FilterSequence.h  FirstOrNextSelector.h  InlineAction.h  InlineActionBehavior.h  InlineBehavioralAction.h  LastOrNextChildSelector.h  LastSuccessfulChildSelector.h  Monitor.h  Parallel.h  Repeat.h  ScriptedBehavior.h  Selector.h  Sequence.h  ShortCircuitSequence.h  ShortCircuitingSequence.h  (+2 more)
asset/: ScriptAsset.cpp  ScriptAsset.h  SpriteAsset.cpp  SpriteAsset.h  asset.cpp  asset.h
audio/: AudioAsset.cpp  AudioAsset.h  AudioManager.cpp  AudioManager.h  AudioResource.cpp  AudioResource.h
character/: AnimatedSprite.cpp  AnimatedSprite.h  Component.cpp  Direction.h  DirectionUtils.cpp  DirectionUtils.h  Hotspot.cpp  Hotspot.h  IGameMoveStrategy.h  IMovement.h  Inventory.cpp  Inventory.h  Movement.h  MovementAtSpeed.cpp  MovementAtSpeed.h  Npc.cpp  Npc.h  StatefulMove.cpp  StatefulMove.h  StaticSprite.cpp  StaticSprite.h
cmake/: build.bat  cppgamelibConfig.cmake
com/: COMUtils.h
common/: Common.h  Logger.cpp  Logger.h  StaticConfig.h  TypeAliases.h  aliases.h  constants.h  global_config.h  static_config.h
cppgamelib/: ai.h  asset.h  audio.h  character.h  events.h  exceptions.h  file.h  font.h  geometry.h  graphic.h  json.h  logging.h  movement.h  net.h  objects.h  processes.h  resource.h  scene.h  time.h  utils.h
events/: AddGameObjectToCurrentSceneEvent.cpp  AddGameObjectToCurrentSceneEvent.h  ControllerMoveEvent.cpp  ControllerMoveEvent.h  DoLogicUpdateEvent.cpp  DoLogicUpdateEvent.h  Event.cpp  Event.h  EventFactory.cpp  EventFactory.h  EventId.cpp  EventId.h  EventManager.cpp  EventManager.h  EventNumbers.h  EventSubscriber.cpp  EventSubscriber.h  Events.h  GameObjectEvent.cpp  GameObjectEvent.h  IEventSerializationManager.cpp  IEventSerializationManager.h  IEventSubscriber.cpp  IEventSubscriber.h  NetworkPlayerJoinedEvent.h  NetworkTrafficReceivedEvent.cpp  NetworkTrafficReceivedEvent.h  NetworkTrafficRecievedEvent.cpp  NetworkTrafficRecievedEvent.h  PlayerMovedEvent.cpp  PlayerMovedEvent.h  PositionChangeEvent.cpp  PositionChangeEvent.h  ReliableUdpAckPacketEvent.h  ReliableUdpCheckSumFailedEvent.h  ReliableUdpPacketLossDetectedEvent.h  ReliableUdpPacketReceivedEvent.h  ReliableUdpPacketRttCalculatedEvent.h  SceneChangedEvent.cpp  SceneChangedEvent.h  (+15 more)
exceptions/: EngineException.cpp  EngineException.h  base_exception.cpp  base_exception.h
file/: Logger.cpp  Logger.h  ScriptManager.cpp  ScriptManager.h  SerializationManager.cpp  SerializationManager.h  SettingDetail.cpp  SettingDetail.h  SettingsManager.cpp  SettingsManager.h  TextFile.cpp  TextFile.h  tinyxml2.cpp  tinyxml2.h
font/: FontAsset.cpp  FontAsset.h  FontManager.cpp  FontManager.h  font_manager.cpp  font_manager.h  font_resource.cpp  font_resource.h
geometry/: ABCDRectangle.h  Coordinate.cpp  Line.h  Side.h  SideUtils.h
graphic/: ColourKey.cpp  ColourKey.h  DrawableFrameRate.cpp  DrawableFrameRate.h  DrawableText.cpp  DrawableText.h  Drawing.cpp  Drawing.h  GraphicAsset.cpp  GraphicAsset.h  GraphicAssetFactory.cpp  GraphicAssetFactory.h  KeyFrame.cpp  KeyFrame.h  RectDebugging.h  SDLGraphicsManager.cpp  SDLGraphicsManager.h  Subscribable.cpp  Subscribable.h  Window.cpp  Window.h  graphic_resource.cpp  graphic_resource.h  sdl_graphics_manager.cpp  sdl_graphics_manager.h
input/: IInputManager.cpp  IInputManager.h
json/: JsonEventSerializationManager.cpp  JsonEventSerializationManager.h  json11.cpp  json11.h
movement/: IGameMoveStrategy.h  IMovement.h  Movement.cpp  Movement.h
net/: BitPacker.h  BitPackingTypes.h  BitfieldReader.h  Connection.cpp  Connection.h  Fish.h  GameClient.cpp  GameClient.h  GameClientConnectionFactory.cpp  GameClientConnectionFactory.h  GameServer.cpp  GameServer.h  GameServerConnectionFactory.h  GameStatePusher.cpp  GameStatePusher.h  IConnectedNetworkSocket.h  IElapsedTimeProvider.h  IGameClientConnection.h  IGameClientConnetionProtocolManager.h  IGameServerConnection.h  INetworkSocket.h  IProtocolManager.h  LocalNetworkSocket.cpp  LocalNetworkSocket.h  LocalSocketProtocolManager.cpp  LocalSocketProtocolManager.h  LocalSocketServerConnection.cpp  LocalSocketServerConnection.h  Message.cpp  Message.h  MessageHeader.cpp  MessageHeader.h  NetworkConnectionFactory.cpp  NetworkConnectionFactory.h  NetworkEvent.cpp  NetworkEvent.h  NetworkManager.cpp  NetworkManager.h  NetworkPlayer.cpp  NetworkPlayer.h  (+38 more)
objects/: AnimatedSprite.cpp  AnimatedSprite.h  Component.cpp  Component.h  DrawableGameObject.cpp  DrawableGameObject.h  DrawingBase.cpp  DrawingBase.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameObjectType.h  Npc.cpp  (+22 more)
(+102 files in other folders)
